# datacube-docker

./: README.md
.github/: dependabot.yml
.github/workflows/: build-index.yml  build-statistician.yml  index-image.yml  index-push.yml  index-test.yml  push-index.yml  push-statistician.yml  statistician-dive.yml  statistician-image.yml  statistician-push.yml  statistician-test.yml  test-build-images.yml  test-index.yml  test-statistician.yml
index/: Dockerfile  Makefile  README.md  constraints.txt  docker-compose-indexing-capetown.yml  docker-compose-sentinel-2-indexing.yml  docker-compose.dev.yml  docker-compose.standalone.yaml  docker-compose.yml  pyproject.toml  readme.md  requirements-apt-run.txt  requirements-apt.txt  requirements.txt  test_bootstrapping.sh  test_indexing.sh  version.txt
index/archival/: prods.txt  query.sql  run.sh
index/assets/: bootstrap-odc.sh  dev-pod-explorer.yaml  dev-pod-indexing-capetown.yml  dev-pod.yaml  index-sentinel-2-capetown.py  index-sentinel-2.py  index_s3.py  index_sentinel_2_capetown.py
statistician/: Dockerfile  Makefile  README.md  constraints.txt  docker-compose.yml  env.yaml  nobinary.txt  readme.md  requirements-apt-run.txt  requirements.txt  setup_reqs.txt  test_statistician.sh
statistician/test_data/: ga_ls_fc_pc_cyear_3_x49y24_2015--P1Y_final.sha1  ga_ls_tc_pc_cyear_3_x49y24_2015--P1Y_final.sha1  ga_ls_wo_fq_cyear_3_x49y24_2015--P1Y_final.sha1
statistician/tests/: compare_data.sh  init_db.sh  integration_test.sh
statistician/tests/data/: ga_ls8c_nbart_gm_cyear_3_x49y24_2015--P1Y_final.sha1
