[project]
name = "datacube-index"
version = "0.1.0"
description = "Installation project for datacube-index"
requires-python = ">=3.12"
dependencies = [
    "datacube[performance,postgres,s3]>=1.9.18",
    "aiobotocore",
    "awscli",
    # Azure indexing, just in case.
    "azure-storage-blob",
    # For running datacube-ows-update after s3-to-dc.
    "datacube-ows",
    "odc-apps-dc-tools",
    "psycopg[c]",
    # FIXME: comment why fiona is included here.
    "fiona>=1.10.1",
]
